--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".SummaryReportingActivity"></activity>
+        <activity android:name=".ReportingActivity" />
+        <activity android:name=".MentorMenteeActivity" />
         <activity android:name=".SummaryActivity" />
         <activity android:name=".NewSessionActivity" />
         <activity android:name=".NewOperationActivity" />
